// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveButton should render correctly when disabled 1`] = `
<button
  className="btn btn-success"
  disabled={true}
  onClick={[MockFunction]}
  style={
    Object {
      "borderRadius": "25px",
      "bottom": "10px",
      "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
      "fontSize": "18px",
      "height": "50px",
      "lineHeight": "1.33",
      "padding": "10px 16px",
      "position": "fixed",
      "right": "10px",
      "width": "50px",
      "zIndex": 1049,
    }
  }
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check fa-w-16 "
    data-icon="check"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</button>
`;

exports[`SaveButton should render correctly when enabled 1`] = `
<button
  className="btn btn-success"
  disabled={false}
  onClick={[MockFunction]}
  style={
    Object {
      "borderRadius": "25px",
      "bottom": "10px",
      "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
      "fontSize": "18px",
      "height": "50px",
      "lineHeight": "1.33",
      "padding": "10px 16px",
      "position": "fixed",
      "right": "10px",
      "width": "50px",
      "zIndex": 1049,
    }
  }
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-check fa-w-16 "
    data-icon="check"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</button>
`;
